--- a/lib/minesweeper_web/templates/layout/app.html.eex
+++ b/lib/minesweeper_web/templates/layout/app.html.eex
@@ -4,13 +4,13 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Minesweeper - Visible test change</title>
+    <title>Minesweeper</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Minesweeper</a>
+        <a class="navbar-brand" href="/">Minesweeper - Visible Test Change</a>
       </div>
     </nav>
 
