--- a/lib/minesweeper_web/templates/layout/app.html.eex
+++ b/lib/minesweeper_web/templates/layout/app.html.eex
@@ -10,7 +10,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Minesweeper - Visible Test Change</a>
+        <a class="navbar-brand" href="/">Minesweeper - The most popular eSports game ever</a>
       </div>
     </nav>
 
